💄 Added images to upgrades, and colour change on hover
The different images will be shown on the left side of the upgrade based on the name of the upgrade.

The upgrade will also change colour to a slightly brighter one when the mouse is hovering over it. This was done using the &:hover pseudo-class with Sass.

Next I need to add functionality for clicking on the upgrade. And also it should flash when purchased.

--- a/style.css
+++ b/style.css
@@ -63,4 +63,20 @@ UPGRADES
   border-radius: 10px;
   border: 10px solid transparent;
   margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  /*
+      Image
+  */
+  /*
+      Text
+  */
+}
+#upgrades .upgrade .upgrade-image {
+  height: 72px;
+  width: 72px;
+  margin-right: 10px;
+}
+#upgrades .upgrade:hover {
+  background-color: rgb(70, 69, 74);
 }/*# sourceMappingURL=style.css.map */
