--- a/style.css
+++ b/style.css
@@ -49,13 +49,18 @@ UPGRADES
   flex: 30%;
   padding: 20px;
   background-color: rgb(28, 27, 31);
-  color: white;
   border-radius: 10px;
   border: 4px solid;
   border-color: rgb(44, 43, 47);
   overflow: auto;
   /*
       UPGRADE
+  */
+  /*
+      Image
+  */
+  /*
+      Text
   */
 }
 #upgrades .upgrade {
@@ -67,19 +72,14 @@ UPGRADES
   align-items: center;
   position: relative;
   /*
-      Image
-  */
-  /*
-      Text
-  */
-  /*
       On mouse hover event 
   */
-}
-#upgrades .upgrade .upgrade-image {
-  height: 72px;
-  width: 72px;
-  margin-right: 10px;
+  /*
+      Flash overlay
+  */
+  /* 
+      Overlay
+  */
 }
 #upgrades .upgrade:hover {
   background-color: rgb(70, 69, 74);
@@ -90,12 +90,32 @@ UPGRADES
   left: -10px;
   width: calc(100% + 20px);
   height: calc(100% + 20px);
+  border-radius: inherit;
   background: white;
   opacity: 0.7;
-  border-radius: inherit;
   transition: opacity 0.25s;
   animation: flash 0.25s linear;
   animation-fill-mode: forwards;
+}
+#upgrades .upgrade .overlay {
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  width: calc(100% + 20px);
+  height: calc(100% + 20px);
+  border-radius: inherit;
+  background-color: black;
+  opacity: 0.5;
+}
+#upgrades .upgrade-image {
+  height: 72px;
+  width: 72px;
+  margin-right: 10px;
+}
+#upgrades .upgrade-text {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 @keyframes flash {
