--- a/style.css
+++ b/style.css
@@ -49,10 +49,12 @@ UPGRADES
   flex: 30%;
   padding: 20px;
   background-color: rgb(28, 27, 31);
+  color: white;
   border-radius: 10px;
   border: 4px solid;
   border-color: rgb(44, 43, 47);
-  overflow: auto;
+  overflow: scroll;
+  max-height: 600px;
   /*
       UPGRADE
   */
