--- a/style.css
+++ b/style.css
@@ -127,4 +127,13 @@ UPGRADES
   to {
     opacity: 0;
   }
+}
+.tooltip {
+  position: fixed;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  z-index: 999;
 }/*# sourceMappingURL=style.css.map */
