--- a/style.scss
+++ b/style.scss
@@ -200,3 +200,15 @@ UPGRADES
     from {opacity: $upgrade_flash_initial_opacity;}
     to {opacity: 0;}
 }
+
+
+
+.tooltip {
+    position: fixed;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 999;
+}
